survey removed from alp-calculator

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,12 +20,12 @@ import ALPDVideo from "../components/ALPDVideo.astro";
     <h2 class="files-heading">Read THE case files and collect evidence</h2>
 
     <div class="case-file__first">
-      <CaseFile imgSrc="alp-folder" imgAlt="alpd file" link="/alpd-academy/">
+      <CaseFile imgSrc="alp-academy-2" imgAlt="alpd file" link="/alpd-academy/">
         Study the role of alkaline phosphatase and the dangers associated with
         low activity.
       </CaseFile>
 
-      <CaseFile imgSrc="hpp-folder" imgAlt="hpp folder" link="/hpp-profile/">
+      <CaseFile imgSrc="hpp-profile-2" imgAlt="hpp folder" link="/hpp-profile/">
         View the rap sheet on hypophosphatasia and the harm it may be causing
         your patients.
       </CaseFile>
@@ -33,7 +33,7 @@ import ALPDVideo from "../components/ALPDVideo.astro";
 
     <div class="case-file__second">
       <CaseFile
-        imgSrc="usual-folder"
+        imgSrc="usual-suspect-folder-2"
         imgAlt="usual suspect folder"
         link="/usual-suspects/"
         className="modifier"
@@ -43,7 +43,7 @@ import ALPDVideo from "../components/ALPDVideo.astro";
       </CaseFile>
 
       <CaseFile
-        imgSrc="identifying-folder"
+        imgSrc="identifying-hpp-2"
         imgAlt="identifying suspect folder"
         className="custom-class"
         link="/identifying-hpp/"
