--- a/src/styles/components/_usual-modal-grids.scss
+++ b/src/styles/components/_usual-modal-grids.scss
@@ -2,14 +2,21 @@
   display: block;
   margin-right: auto;
   margin-left: auto;
-  max-width: 845px;
+  max-width: 1000px;
+  background-color: $color-white;
+
+  @media screen and (min-width: 768px) {
+    padding: 0 !important;
+  }
 
   .navigation__links {
     display: flex;
     @include flex-gap(1rem);
     align-items: center;
     justify-content: flex-end;
-    margin-top: 2rem;
+    position: absolute;
+    bottom: 3rem;
+    right: 3rem;
 
     .navigation__item {
       color: $color-blue;
@@ -33,10 +40,36 @@
     display: none;
     // smooth transition
     transition: all 0.3s ease-in-out;
+    padding: 1rem;
 
     &.is--active {
       display: block;
     }
+
+    &[data-page='1'] {
+      background-image: url('/assets/images/usual-suspects/modals/bg-modal--main.png');
+      background-repeat: no-repeat;
+      background-position: top center;
+      background-size: 100% 100%;
+
+      .modal__grids_article--bg {
+        padding: 3rem 2rem 6rem 2rem;
+      }
+    }
+
+    &[data-page='2'],
+    &[data-page='3'] {
+      background-image: url('/assets/images/usual-suspects/modals/bg-modal.png');
+      background-repeat: no-repeat;
+      background-position: top center;
+      background-size: 100% 100%;
+
+      .modal__grids_article--bg--white {
+        background-color: white;
+        padding: 2rem 2rem 6rem 2rem;
+      }
+    }
+
   }
 
   &_title {
@@ -53,6 +86,10 @@
     sup {
       top: -0.7em;
       font-size: 55%;
+    }
+
+    &--margin-custom {
+      margin-top: 9rem;
     }
   }
 
@@ -113,6 +150,18 @@
 
       li {
         color: $color-carbon;
+        position: relative;
+
+        &::before {
+          content: "";
+          width: 0.29rem;
+          height: 0.29rem;
+          background-color: #1F1511;
+          border-radius: 50%;
+          position: absolute;
+          top: 0.6rem;
+          left: -0.8rem;
+        }
       }
 
       ul {
@@ -147,4 +196,9 @@
 
   }
 
+  .note {
+    margin-top: 1rem;
+    font-weight: 400;
+    font-style: italic;
+  }
 }
