--- a/src/components/Usual-suspect/ModalDesktop.astro
+++ b/src/components/Usual-suspect/ModalDesktop.astro
@@ -6,7 +6,7 @@ import ModalAdultsDesktop from "./ModalAdultsDesktop.astro";
 
 <Fragment>
   <div id="usual-suspect-modal-template" style="display: none;">
-    <!-- <ModalInfantsDesktop /> -->
+    <ModalInfantsDesktop />
     <ModalAdultsDesktop />
   </div>
 </Fragment>
