--- a/src/components/Usual-suspect/ModalInfantsDesktop.astro
+++ b/src/components/Usual-suspect/ModalInfantsDesktop.astro
@@ -6,7 +6,7 @@ import ModalDesktopNavigation from "./ModalDesktopNavigation.astro";
 <section class="modal__grids" id="usual-supect-modal--infants--desktop">
   <button data-fancybox-close class="usual-supect__modal_close-button">×</button
   >
-  <article class="modal__grids_article is--active" data-page="1">
+  <article class="modal__grids_article infants is--active" data-page="1">
     <div class="modal__grids_article--bg">
       <h1 class="modal__grids_title modal__grids_title--margin-custom">
         INFANTILE/PEDIATRIC MISDIAGNOSES<sup>1,2</sup>
@@ -150,7 +150,7 @@ import ModalDesktopNavigation from "./ModalDesktopNavigation.astro";
       </div><!-- end of grid -->
     </div>
   </article>
-  <article class="modal__grids_article" data-page="2">
+  <article class="modal__grids_article infants" data-page="2">
     <div class="modal__grids_article--bg--white">
       <div class="grid align--baseline">
         <div class="left">
@@ -308,7 +308,7 @@ import ModalDesktopNavigation from "./ModalDesktopNavigation.astro";
       </div><!-- end of grid -->
     </div>
   </article>
-  <article class="modal__grids_article" data-page="3">
+  <article class="modal__grids_article infants" data-page="3">
     <div class="modal__grids_article--bg--white">
       <div class="grid align--baseline full--width">
         <div class="col">
@@ -403,68 +403,5 @@ import ModalDesktopNavigation from "./ModalDesktopNavigation.astro";
       </div><!-- end of grid -->
     </div>
   </article>
-  <ModalDesktopNavigation />
+  <ModalDesktopNavigation type="infants" />
 </section>
-<script>
-  // vanilla document ready
-  document.addEventListener("DOMContentLoaded", function (event) {
-    // Navigation Functionality
-    const modalArticles = document.querySelectorAll(".modal__grids_article");
-    const currentActiveArticle = document.querySelector(
-      ".modal__grids_article.is--active"
-    );
-    if (currentActiveArticle === modalArticles[0]) {
-      document.querySelector(".navigation__item.prev").classList.add("hidden");
-    } else if (
-      currentActiveArticle === modalArticles[modalArticles.length - 1]
-    ) {
-      document.querySelector(".navigation__item.next").classList.add("hidden");
-    } else {
-      document
-        .querySelector(".navigation__item.prev")
-        .classList.remove("hidden");
-      document
-        .querySelector(".navigation__item.next")
-        .classList.remove("hidden");
-    }
-    const navigationLinks = document.querySelectorAll(".navigation__item_link");
-
-    navigationLinks.forEach((link) => {
-      link.addEventListener("click", (e) => {
-        e.preventDefault();
-        const currentActiveArticle = document.querySelector(
-          ".modal__grids_article.is--active"
-        );
-        const currentActiveArticleIndex =
-          Array.from(modalArticles).indexOf(currentActiveArticle);
-        const nextArticleIndex = currentActiveArticleIndex + 1;
-        const prevArticleIndex = currentActiveArticleIndex - 1;
-        const nextArticle = modalArticles[nextArticleIndex];
-        const prevArticle = modalArticles[prevArticleIndex];
-        if (link.classList.contains("next")) {
-          currentActiveArticle.classList.remove("is--active");
-          nextArticle.classList.add("is--active");
-          if (nextArticle === modalArticles[modalArticles.length - 1]) {
-            document
-              .querySelector(".navigation__item.next")
-              .classList.add("hidden");
-          }
-          document
-            .querySelector(".navigation__item.prev")
-            .classList.remove("hidden");
-        } else if (link.classList.contains("prev")) {
-          currentActiveArticle.classList.remove("is--active");
-          prevArticle.classList.add("is--active");
-          if (prevArticle === modalArticles[0]) {
-            document
-              .querySelector(".navigation__item.prev")
-              .classList.add("hidden");
-          }
-          document
-            .querySelector(".navigation__item.next")
-            .classList.remove("hidden");
-        }
-      });
-    });
-  });
-</script>
