--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -9,6 +9,10 @@ import ISI from "../components/ISI.astro";
 import CookieBanner from "../components/CookieBanner.astro";
 import StayConnected from "../components/stay-conected.astro";
 import AlpCalculator from "../components/AlpCalculator.astro";
+
+import CaseFileModal from "../components/Case-Files/CaseFileModal.astro";
+import CaseFileModalDesktop from "../components/Case-Files/CaseFileModalDesktop.astro";
+
 export interface Props {
   title: string;
   pageClass?: string;
@@ -49,6 +53,10 @@ const {
     {showFooter && <Footer />}
     <StayConnected />
     <AlpCalculator />
+    <CaseFileModal />
+    <div class="case__files_modal_wrapper">
+      <CaseFileModalDesktop />
+    </div>
   </body>
   <script src="/assets/js/script.js" type="module"></script>
   <script is:inline src="/assets/js/forms.js"></script>
