--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -468,3 +468,21 @@
   }
 
 }
+
+.nav__menu_item {
+  &--only-desktop {
+    display: none !important;
+
+    @media screen and (min-width: 1100px) {
+      display: block !important;
+    }
+  }
+
+  &--only-mobile {
+    display: block !important;
+
+    @media screen and (min-width: 1100px) {
+      display: none !important;
+    }
+  }
+}
