--- a/src/components/usual-suspects/MobileSelector.astro
+++ b/src/components/usual-suspects/MobileSelector.astro
@@ -4,9 +4,9 @@ import ChildrenAdolescent from "./tabs/ChildrenAdolescent.astro";
 import ChildrenTab from "./tabs/ChildrenTab.astro";
 ---
 
-<section class="hpp__profile">
+<div class="hpp__profile">
   <!-- Multisystemic Symptoms and Disease Burden -->
-  <section id="hpp-multisystemic" class="section hpp-multisystemic">
+  <div id="hpp-multisystemic" class="hpp-multisystemic">
     <h2 class="wrapper hpp__profile__title hpp__profile__title--desktop">
       Common suspects in:
     </h2>
@@ -90,5 +90,5 @@ import ChildrenTab from "./tabs/ChildrenTab.astro";
         <ChildrenTab />
       </section>
     </article>
-  </section>
-</section>
+  </div>
+</div>
