--- a/src/pages/usual-suspects.astro
+++ b/src/pages/usual-suspects.astro
@@ -58,10 +58,10 @@ const internalNavLinks = [
                 timely and accurate diagnosis.<sup>1-5</sup>
             </p>
         </div>
-    </section>
 
-    <section class="usual-suspects-tabs--mobile">
-        <MobileSelector />
+        <article class="usual-suspects-tabs--mobile">
+            <MobileSelector />
+        </article>
     </section>
 
     <section
