--- a/src/components/Suspect-Card.astro
+++ b/src/components/Suspect-Card.astro
@@ -23,10 +23,9 @@ const {
 ---
 
 <div class="suspect-card">
-    <!--     <div class="suspect-card_bordered-item">
+    <div class="suspect-card_bordered-item title__wrapper">
         <h3 class="suspect-card_title">{title}</h3>
     </div>
- -->
     <div class="suspect-card_bordered-item">
         <img src={image} alt="" />
     </div>
