--- a/src/styles/components/_suspect-card.scss
+++ b/src/styles/components/_suspect-card.scss
@@ -4,16 +4,20 @@
     &--desktop--only {
         display: none;
 
-        @media screen and (min-width: 769px) {
+        @media screen and (min-width: 1024px) {
             display: block;
         }
     }
 
     &--mobile--only {
-        display: none;
+        @media screen and (min-width: 1024px) {
+            display: none;
+        }
+    }
 
-        @media screen and (max-width: 768px) {
-            display: block;
+    .suspect-card_bordered-item.title__wrapper {
+        @media screen and (min-width: 1024px) {
+           display: none;
         }
     }
 
@@ -29,8 +33,12 @@
         margin: -1rem auto 0 auto;
     }
 
-    @media screen and (min-width: 768px) and (max-width: 1400px) {
+    @media screen and (min-width: 1024px) {
         padding: 0.5rem;
+        
+        &:not(:last-of-type) {
+            border-bottom: none;
+        }
 
         img {
             max-width: 12.5rem;
@@ -69,6 +77,8 @@
 
 .suspect-card_title {
     font-weight: 600;
+    font-size: 1.125rem;
+    line-height: 25.2px;
 }
 
 .suspect-card_subtitle {
@@ -88,10 +98,9 @@
 }
 
 .suspect-card--foot {
-    @media screen and (min-width: 769px) {
+    @media screen and (min-width: 1024px) {
         display: flex;
         align-items: center;
-        border: 1px solid $color-red;
         padding-left: 0.5rem;
     }
 }
@@ -104,6 +113,6 @@
 
 .suspect-card__cards-container--foot {
     @media screen and (min-width: 768px) {
-        padding: 0rem 2rem 12rem 2rem;
+        // padding: 0rem 2rem 12rem 2rem;
     }
 }
