--- a/src/components/Usual-suspect/ModalAdultsDesktop.astro
+++ b/src/components/Usual-suspect/ModalAdultsDesktop.astro
@@ -21,14 +21,14 @@ import ModalDesktopNavigation from "./ModalDesktopNavigation.astro";
                 </div>
                 <div class="right">
                     <p class="heading">
-                        How to differentiate from hypophosphatasia
+                        How to differentiate from <br /> hypophosphatasia
                     </p>
                 </div>
             </div><!-- end of grid -->
             <div class="grid">
                 <div class="left">
                     <p class="sub-heading">
-                        Osteogenesis imperfecta (OI)<sup>1,3-7</sup>
+                        Osteogenesis imperfecta (OI)<sup>1,6</sup>
                     </p>
                 </div>
                 <div class="middle">
@@ -232,11 +232,11 @@ import ModalDesktopNavigation from "./ModalDesktopNavigation.astro";
                 </div>
                 <div class="right">
                     <p class="heading">
-                        How to differentiate from hypophosphatasia
+                        How to differentiate from <br /> hypophosphatasia
                     </p>
                 </div>
             </div><!-- end of grid -->
-            <div class="grid">
+            <div class="grid grid--no-border">
                 <div class="left">
                     <p class="sub-heading">
                         Ehlers-Danlos syndrome<sup>10,13,14,18-20</sup>
@@ -271,16 +271,14 @@ import ModalDesktopNavigation from "./ModalDesktopNavigation.astro";
             <h1 class="modal__grids_title">RISK OF TREATMENT</h1>
             <div class="grid align--baseline">
                 <div class="left">
-                    <p class="heading">
-                        Differential diagnoses for hypophosphatasia (HPP)
-                    </p>
+                    <p class="heading">Treatments for differential diagnoses</p>
                 </div>
                 <div class="middle">
-                    <p class="heading">Shared symptoms</p>
+                    <p class="heading">Patient <br /> populations</p>
                 </div>
                 <div class="right">
                     <p class="heading">
-                        How to differentiate from hypophosphatasia
+                        Risk of treatment in patients with hypophosphatasia
                     </p>
                 </div>
             </div>
@@ -380,113 +378,114 @@ import ModalDesktopNavigation from "./ModalDesktopNavigation.astro";
                     <References>
                         <strong>1.</strong> National Institute of Child Health and
                         Human Development. What are the symptoms of osteogenesis
-                        imperfecta (OI). Accessed March 30, 2023. <span
-                            ><a
-                                href="https://www.nichd.nih.gov/health/topics/osteogenesisimp/conditioninfo/symptoms"
-                                >https://www.nichd.nih.gov/health/topics/osteogenesisimp/conditioninfo/symptoms</a
-                            ></span
+                        imperfecta (OI). Accessed March 30, 2023. <a
+                            target="_blank"
+                            href="https://www.nichd.nih.gov/health/topics/osteogenesisimp/conditioninfo/symptoms"
+                            >https://www.nichd.nih.gov/health/topics/osteogenesisimp/conditioninfo/symptoms</a
                         >
-                        <strong>2.</strong> Marini JC, Cabral WA. Osteogenesis Imperfecta.
+                        <strong> 2.</strong> Marini JC, Cabral WA. Osteogenesis Imperfecta.
                         In: Thakker RV, Whyte MP, Eisman JA, Igarashi T, eds. <em
                             >Genetics of Bone Biology and Skeletal Disease.</em
-                        > 2nd ed. Academic Press; 2018:397-420. <strong
-                            >3.</strong
+                        > 2nd ed. Academic Press; 2018:397-420. <strong>
+                            3.</strong
                         > Offiah A, Vockley J, Munns CF, Murotsuki J. Differential
                         diagnosis of perinatal hypophosphatasia: radiologic perspectives.
                         <em>Pediatr Radiol.</em> 2019;49(1):3-22.
-                        <strong>4.</strong>
+                        <strong> 4.</strong>
                         Bloch-Zupan A. Hypophosphatasia: diagnosis and clinical signs
                         - a dental surgeon perspective. <em
                             >Int J Paediatr Dent.</em
                         > 2016;26(6):426-438.
-                        <strong>5.</strong> Taillandier A, Domingues C, De Cazanove
+                        <strong> 5.</strong> Taillandier A, Domingues C, De Cazanove
                         C, et al. Molecular diagnosis of hypophosphatasia and differential
                         diagnosis by targeted Next Generation Sequencing. <em
                             >Mol Genet Metab.</em
                         > 2015;116(3):215-220.
-                        <strong>6.</strong> Duffus S, Thrasher B, Calikoglu AS. Brief
-                        clinical report: hypophosphatasia–diagnostic considerations
+                        <strong> 6.</strong> Duffus S, Thrasher B, Calikoglu AS.
+                        Brief clinical report: hypophosphatasia–diagnostic considerations
                         and treatment outcomes in an infant. <em
                             >Case Rep Pediatr.</em
                         > 2018;2018:5719761.
-                        <strong>7.</strong> Shapiro JR, Lewiecki EM. Hypophosphatasia
+                        <strong> 7.</strong> Shapiro JR, Lewiecki EM. Hypophosphatasia
                         in adults: clinical assessment and treatment considerations.
                         <em>J Bone Miner Res.</em> 2017;32(10):1977-1980.
-                        <strong>8.</strong> Desborough R, Nicklin P, Gossiel F, et
-                        al. Clinical and biochemical characteristics of adults with
-                        hypophosphatasia attending a metabolic bone clinic. <em
-                            >Bone.</em
-                        >
-                        2021;144:115795. <strong>9.</strong> Fink HA, Litwack-Harrison
+                        <strong> 8.</strong> Desborough R, Nicklin P, Gossiel F,
+                        et al. Clinical and biochemical characteristics of adults
+                        with hypophosphatasia attending a metabolic bone clinic.
+                        <em>Bone.</em>
+                        2021;144:115795. <strong> 9.</strong> Fink HA, Litwack-Harrison
                         S, Taylor BC, et al. Clinical utility of routine laboratory
                         testing to identify possible secondary causes in older men
                         with osteoporosis: the Osteoporotic Fractures in Men (MrOS)
                         Study. <em>Osteoporos Int.</em> 2016;27(1):331-338.
-                        <strong>10.</strong> Villa-Suárez JM, García-Fontana C, Andújar-Vera
-                        F, et al. Hypophosphatasia: a unique disorder of bone mineralization.
+                        <strong> 10.</strong> Villa-Suárez JM, García-Fontana C,
+                        Andújar-Vera F, et al. Hypophosphatasia: a unique disorder
+                        of bone mineralization.
                         <em>Int J Mol Sci.</em> 2021;22(9):4303.
-                        <strong>11.</strong>
+                        <strong> 11.</strong>
                         Varacallo M, Seaman TJ, Jandu JS, et al. Osteopenia. StatPearls
                         [Internet]. 2022. Accessed March 30, 2023. <a
+                            target="_blank"
                             href="https://www.ncbi.nlm.nih.gov/books/NBK499878/"
                             >https://www.ncbi.nlm.nih.gov/books/NBK499878/</a
                         >
-                        <strong>12.</strong> Macmullan P, McCarthy G. Treatment and
-                        management of pseudogout: insights for the clinician. <em
-                            >Ther Adv Muscoloskel Dis.</em
-                        > 2012;4(2):121-131. <strong>13.</strong> Tournis S, Yavropoulou
-                        MP, Polyzos SA, Doulgeraki A. Hypophosphatasia. <em
-                            >J Clin Med.</em
+                        <strong> 12.</strong> Macmullan P, McCarthy G. Treatment
+                        and management of pseudogout: insights for the clinician.
+                        <em>Ther Adv Muscoloskel Dis.</em> 2012;4(2):121-131. <strong
                         >
-                        2021;10(23):5676. <strong>14.</strong> Simon S, Resch H,
+                            13.</strong
+                        > Tournis S, Yavropoulou MP, Polyzos SA, Doulgeraki A. Hypophosphatasia.
+                        <em>J Clin Med.</em>
+                        2021;10(23):5676. <strong> 14.</strong> Simon S, Resch H,
                         Klaushofer K, Roschger P, Zwerina J, Kocijan R. Hypophosphatasia:
                         from diagnosis to treatment. <em>Curr Rheumatol Rep.</em
                         > 2018;20(11):69.
-                        <strong>15.</strong> Rosenthal AK, Ryan LM. Calcium pyrophosphate
+                        <strong> 15.</strong> Rosenthal AK, Ryan LM. Calcium pyrophosphate
                         deposition disease. <em>N Engl J Med.</em> 2016;374(26):2575-2584.
-                        <strong>16.</strong> National Institute of Arthritis and
+                        <strong> 16.</strong> National Institute of Arthritis and
                         Musculoskeletal and Skin Diseases. Osteoarthritis. Accessed
                         March 30, 2023. <a
+                            target="_blank"
                             href="https://www.niams.nih.gov/health-topics/osteoarthritis"
                             >https://www.niams.nih.gov/health-topics/osteoarthritis</a
                         >
-                        <strong>17.</strong> Park HM, Lee JH, Lee YJ. Positive association
+                        <strong> 17.</strong> Park HM, Lee JH, Lee YJ. Positive association
                         of serum alkaline phosphatase level with severe knee osteoarthritis:
                         a nationwide population-based study. <em
                             >Diagnostics (Basel).</em
                         > 2020;10(12):1016.
-                        <strong>18.</strong> Kishnani PS, Rush ET, Arudne P, et al.
-                        Monitoring guidance for patients with hypophosphatasia treated
-                        with asfotase alfa.
+                        <strong> 18.</strong> Kishnani PS, Rush ET, Arudne P, et
+                        al. Monitoring guidance for patients with hypophosphatasia
+                        treated with asfotase alfa.
                         <em>Mol Genet Metab.</em>
-                        2017;122(1-2):4-17.<strong>19.</strong> Abel MD, Carrasco
+                        2017;122(1-2):4-17.<strong> 19.</strong> Abel MD, Carrasco
                         LR. Ehlers-Danlos syndrome: classifications, oral manifestations,
                         and dental considerations.
                         <em
                             >Oral Surg Oral Med Oral Pathol Oral Radiol Endod.</em
                         > 2006;102(5):582-590.
-                        <strong>20.</strong> Sobey G. Ehlers-Danlos syndrome: how
+                        <strong> 20.</strong> Sobey G. Ehlers-Danlos syndrome: how
                         to diagnose and when to perform genetic tests. <em
                             >Arch Dis Child.</em
                         >
                         2015;100(1):57-61.
-                        <strong>21.</strong> Boyce AM, Tosi LL, Paul SM. Bisphosphonate
+                        <strong> 21.</strong> Boyce AM, Tosi LL, Paul SM. Bisphosphonate
                         treatment for children with disabling conditions. <em
                             >PM R.</em
                         > 2014;6(5):427-436.
-                        <strong>22.</strong> Stadecker WJ. Bisphosphonates 101: an
-                        update for the general dentist. <em
+                        <strong> 22.</strong> Stadecker WJ. Bisphosphonates 101:
+                        an update for the general dentist. <em
                             >Inside Dentistry.</em
-                        > 2008. <strong>23.</strong> Bianchi ML, Bishop NJ, Guañabens
+                        > 2008. <strong> 23.</strong> Bianchi ML, Bishop NJ, Guañabens
                         N, et al; Rare Bone Disease Action Group of the European
                         Calcified Tissue Society. Hypophosphatasia in adolescents
                         and adults: overview of diagnosis and treatment.
                         <em>Osteoporos Int.</em> 2020;31(8):1445-1460.
-                        <strong>24.</strong> Choida V, Bubbear JS. Update on the
+                        <strong> 24.</strong> Choida V, Bubbear JS. Update on the
                         management of hypophosphatasia. <em
                             >Ther Adv Musculoskelet Dis.</em
                         > 2019;11:1759720X19863997.
-                        <strong>25.</strong>
+                        <strong> 25.</strong>
                         Martos-Moreno GA, Calzada J, Couce ML, Argente J. Hypophosphatasia:
                         clinical manifestations, diagnostic recommendations and therapeutic
                         options. <em>An Pediatr (Engl Ed).</em> 2018;88(6):356.e1-356.e11.
