🐛 Adding new logic to toggle bg image

--- a/src/components/usual-suspects/MobileSelector.astro
+++ b/src/components/usual-suspects/MobileSelector.astro
@@ -11,7 +11,7 @@ import ChildrenTab from "./tabs/ChildrenTab.astro";
       Common suspects in:
     </h2>
 
-    <article class="hpp-multisystemic__tabs">
+    <article class="hpp-multisystemic__tabs common-suspects-tabs" data-active-tab="usual-suspects_tab1">
         <div class="red-string"></div>
       <ul role="tablist" class="hpp-multisystemic__tabs--nav">
         <li role="presentation" class="hpp-multisystemic__tabs--nav-item">
