--- a/src/components/usual-suspects/tabs/ChildrenAdolescent.astro
+++ b/src/components/usual-suspects/tabs/ChildrenAdolescent.astro
@@ -59,7 +59,7 @@ const data_card_4 = {
     subtitle: "Cleidocranial dysostosis",
     subtitle_secondary: "Cleo",
     subtitle_superscript: "11",
-    info: "Note: ",
+    info: "",
     list: [
         "Abnormality of the dentition",
         "Narrow chest",
@@ -76,7 +76,7 @@ const data_card_5 = {
     subtitle: "Campomelic dysplasia",
     subtitle_secondary: "Shorty",
     subtitle_superscript: "2,12",
-    info: "Note: ",
+    info: "",
     list: [
         "Shortening, bowing, and angulation of the long bones",
         "Tibial dimple",
