--- a/src/components/usual-suspects/tabs/ChildrenTab.astro
+++ b/src/components/usual-suspects/tabs/ChildrenTab.astro
@@ -27,7 +27,7 @@ const data_card_2 = {
     subtitle: "Campomelic dysplasia",
     subtitle_secondary: "Shorty",
     subtitle_superscript: "2",
-    info: "Note: ",
+    info: "",
     list: [
         "Shortening, bowing, and angulation of the long bones",
         "Diaphyseal spurs",
