--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -3533,7 +3533,7 @@
     #hpp-multisystemic {
         >.wrapper {
             @media screen and (max-width: 1024px) {
-                max-width: 100%;
+                //max-width: 100%;
             }
         }
     }
